--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^2.3.1",
     "highlight.js": "^11.7.0",
     "markdown-it": "^13.0.1",
+    "moment": "^2.29.4",
     "pinia": "^2.0.33",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
@@ -24,6 +25,7 @@
     "@types/axios": "^0.14.0",
     "@types/highlightjs": "^9.12.2",
     "@types/markdown-it": "^12.2.3",
+    "@types/moment": "^2.13.0",
     "@types/node": "^18.15.5",
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
