--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "markdown-it": "^13.0.1",
     "moment": "^2.29.4",
     "pinia": "^2.0.33",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@iconify-json/ep": "^1.1.10",
+    "@iconify-json/mdi": "^1.1.50",
     "@tailwindcss/typography": "^0.5.9",
     "@types/axios": "^0.14.0",
     "@types/highlightjs": "^9.12.2",
